# libdmtx

./: .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog  LICENSE.html  LICENSE_source.html  README.md  README_8md.html  TODO  annotated.html  annotated_dup.js  classes.html  config.h.in  config_8h.html  config_8h.js  config_8h_source.html  dir_02a0bdb6f9c47f033c79636579346b37.html  dir_02a0bdb6f9c47f033c79636579346b37.js  dir_175213b75212ce5364cb6f26c47e414b.html  dir_175213b75212ce5364cb6f26c47e414b.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dmtx.c  dmtx.h  dmtx_8c.html  dmtx_8c.js  dmtx_8c_source.html  dmtx_8h.html  dmtx_8h.js  dmtx_8h_source.html  dmtxbytelist_8c.html  dmtxbytelist_8c.js  dmtxbytelist_8c_source.html  dmtxcallback.c  dmtxcallback_8c.html  dmtxcallback_8c.js  dmtxcallback_8c_source.html  dmtxdecode_8c.html  (+208 more)
.github/workflows/: build.yml  clang-format-check.yml  doxygen-gh-pages.yml
cmake/: doxygen.cmake  package.cmake  version.cmake
decode/: dmtxdecode.c  dmtxdecodescheme.c
encode/: dmtxencode.c  dmtxencodeascii.c  dmtxencodebase256.c  dmtxencodec40textx12.c  dmtxencodeedifact.c  dmtxencodeoptimize.c  dmtxencodescheme.c  dmtxencodestream.c
examples/: CMakeLists.txt
examples/opencv/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  (+55 more)
src/: dmtx.c  dmtx.h  dmtxcallback.c  dmtxmessage.c  dmtxplacemod.c  dmtxreedsol.c  dmtxregion.c  dmtxscangrid.c  dmtxstatic.h  dmtxsymbol.c
src/decode/: dmtxdecode.c  dmtxdecodescheme.c
src/encode/: dmtxencode.c  dmtxencodeascii.c  dmtxencodebase256.c  dmtxencodec40textx12.c  dmtxencodeoptimize.c  dmtxencodescheme.c  dmtxencodestream.c
src/utils/: dmtxbytelist.c  dmtximage.c  dmtxlog.c  dmtxmatrix3.c  dmtxtime.c  dmtxvector2.c
test/: CMakeLists.txt
test/multi_test/: CMakeLists.txt  _kiss_fft_guts.h  dmtxaccel.c  dmtxdecode2.c  dmtxhough.c  dmtxregion2.c  dmtxsobel.c  dmtxvaluegrid.c  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h  multi_test.c  multi_test.h  visualize.c
test/rotate_test/: CMakeLists.txt  callback.c  callback.h  display.c  display.h  dmtx.c  image.c  image.h  rotate_test.c  rotate_test.h
test/simple_test/: simple_test.c
test/unit_test/: unit_test.c
utils/: dmtxbytelist.c  dmtximage.c  dmtxmatrix3.c  dmtxtime.c  dmtxvector2.c
